--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,16 @@ jobs:
 
       - name: Build
         run: ./gradlew clean assemble
-        
+
       - name: Lint
         run: ./gradlew lint
-        
-      - name: Archive lint results
-        uses: actions/upload-artifact@v3
+
+      - name: Check and report lint results
+        uses: actions/github-script@v6
+        if: always()
         with:
-          name: lint-results
-          path: app/build/reports/lint-results-debug.html
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const script = require('.github/workflows/report-lint.js')
+            const resultFile = 'app/build/reports/lint-results-debug.txt'
+            await script({ core, resultFile })
