use ModalBottomSheet instead of ModalBottomSheetLayout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.ShoppingList"
-            android:windowSoftInputMode="adjustResize">
+            android:theme="@style/Theme.ShoppingList">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
