--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,12 @@
 name: CI
 
-on: push
+on:
+  push:
+    branches: [ main, dev ]
+  pull_request:
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -15,11 +21,13 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+      - uses: gradle/gradle-build-action@v2
+        with:
+          dependency-graph: generate-and-submit
+          generate-job-summary: false
 
       - name: Build
-        run: ./gradlew clean assemble
+        run: ./gradlew build
 
       - name: Lint
         run: ./gradlew lint
