--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ androidGradlePlugin = "8.1.2"
 androidxActivity = "1.8.1"
 androidxCore = "1.12.0"
 androidxComposeBom = "2023.10.01"
+androidxComposeCompiler = "1.5.4"
 androidxComposeMaterial3 = "1.2.0-alpha11"
 androidxLifecycle = "2.6.2"
 androidxRoom = "2.6.0"
